# apparatus-mcp-gateway

./: Cargo.toml  README.md  example.config.yaml
.github/workflows/: rust.yml
src/: main.rs
