[package]
name = "apparatus-mcp-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
dashmap = { version = "6.1.0", features = ["serde"] }
futures-util = "0.3.31"
oneshot = "0.1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
